--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@
       <a href="https://ishakuyusufmaina.github.io/8-puzzle/">🧩 Eight Puzzle</a>
      <a href="https://ishakuyusufmaina.github.io/arithmeticq/">🎮 Arithmetic Q</a>
      <a href="https://ishakuyusufmaina.github.io/bmi/">🧍🏽‍♂️ BMI Calculator</a>
-
+     <a href=calculator.html">🔢 Calculator</a>
+      
     </div>
   </header>
 
